Fixed the no repeating but now I need to fix the white space surrounding the image when the browser is made larger

--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,7 @@ textarea {
     padding: 18rem 5%;
     background-position: center;
     position: relative;
+    background-repeat: no-repeat;
 }
 
 .billboard-title {
